src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__milestone_wizard__adapt_complete_azdo.snap
---
source: src/tui/snapshot_tests/milestone_wizard.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════[ Adapt Complete ]══════════════════════════════════════════════════╗"
"║Pipeline completed successfully!                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║Iterations: 1                                                                                                         ║"
"║Work Items: 1                                                                                                         ║"
"║                                                                                                                      ║"
"║Created: 1 iterations, 1 work items                                                                                   ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"[j/k] Scroll  [Esc] Back                                                                                                "
