src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__milestone_wizard__adapt_complete_github.snap
---
source: src/tui/snapshot_tests/milestone_wizard.rs
expression: terminal.backend()
---
"╔══════════════════════════════════════════════════[ Adapt Complete ]══════════════════════════════════════════════════╗"
"║Pipeline completed successfully!                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║Milestones: 1                                                                                                         ║"
"║Issues: 1                                                                                                             ║"
"║                                                                                                                      ║"
"║Created: 1 milestones, 1 issues                                                                                       ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"[j/k] Scroll  [Esc] Back                                                                                                "
