src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__milestone_wizard__milestone_wizard_complete_github.snap
---
source: src/tui/snapshot_tests/milestone_wizard.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════════[ Step 8/9: Complete ]════════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"┌Complete──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Milestone #7 created                                                                                                  │"
"│  • #101                                                                                                              │"
"│  • #102                                                                                                              │"
"│                                                                                                                      │"
"│Press Enter to return to Landing.                                                                                     │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                             [Enter] next   [Tab] cycle   [Shift+Enter] newline   [Esc] back                            "
"                                                                                                                        "
