src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__milestone_wizard__milestone_wizard_goal_github.snap
---
source: src/tui/snapshot_tests/milestone_wizard.rs
expression: terminal.backend()
---
"╔════════════════════════════════════════════[ Step 1/9: Goal Definition ]═════════════════════════════════════════════╗"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
"[AI] What is the main objective of this milestone?                                                                      "
"[AI] What problem does it solve?                                                                                        "
"[AI] Who benefits when this ships?                                                                                      "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Your goals────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                   Goals are required                                                   "
"                                                                                                                        "
